# pcp_trash

./: .gitignore  CMakeLists.txt
Array/: main.cpp
Cv1/: Game.cpp  Game.h  Maze.cpp  Maze.h  Worm.cpp  Worm.h  main.cpp
Cv2/: Dictionary.cpp  Dictionary.hpp  Game.cpp  Game.hpp  Word.cpp  Word.hpp  main.cpp
Cv3/: CMakeLists.txt  Chatbot.cpp  Chatbot.hpp  Conversation.cpp  Conversation.hpp  Loader.cpp  Loader.hpp  chat.txt  main.cpp
Cv4/: CMakeLists.txt  Game.cpp  Game.h  Map.cpp  Map.h  MapTest.cpp  MapTest.hpp  Tesla.cpp  Tesla.h  main.cpp
Hangman/: Game.cpp  Game.h  Word.cpp  Word.h  game.txt  main.cpp
Tesla/: Auto.cpp  Auto.h  Game.cpp  Game.h  Nabij.cpp  Nabij.h  Road.cpp  Road.h  main.cpp
Text/: main.cpp  main1.cpp  test.txt
test-library/: MapTest.cpp  MapTest.hpp  main.cpp
test-library/TestSuite/: Suite.cpp  Suite.h
